<resources>
    <string name="app_name">GuildPlace2</string>
    <string name="name_input">Username</string>
    <string name="password_input">Password</string>
    <string name="login_text">Login to Guild Place</string>
    <string name="login_button">Login</string>
    <string name="no_account_click_to_register">No account? Click to register!</string>
    <string name="welcome_to_guild_place">Welcome to Guild Place!</string>
    <string name="login_redirect">Login</string>
    <string name="register_redirect">Register</string>
    <string name="got_an_account_click_to_login">Got an account? Click to login!</string>
    <string name="register_button">Register</string>
    <string name="sign_up_to_guild_place">Sign up to Guild Place!</string>
    <string name="email_input">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_posts_list">postsList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="post_title">Title</string>
    <string name="post_author">Author</string>
    <string name="post_creation_time">Created at ...</string>
    <string name="post_details_title">Title</string>
    <string name="post_details_author">by Author</string>
    <string name="post_details_message">Message</string>
</resources>
