<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_guild_place"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameRegisterInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameRegisterInput"
        android:layout_width="match_parent"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:hint="@string/email_input">
        <com.google.android.material.textfield.TextInputEditText
            android:drawableEnd="@drawable/ic_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordRegisterInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.TextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegisterInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:hint="@string/password_input">
        <com.google.android.material.textfield.TextInputEditText
            android:drawableEnd="@drawable/ic_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:textSize="15sp"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterInput" />

    <Button
        android:id="@+id/loginRedirectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        android:text="@string/got_an_account_click_to_login"
        style="@style/Widget.Material3.Button.TextButton"
        android:textSize="11sp"
        android:layout_marginTop="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>