<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:alpha="0"
            android:id="@+id/ghostTextView"/>

        <TextView
            android:padding="10dp"
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
                <TextView
                    android:id="@+id/postAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/post_author"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/postCreationTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/post_creation_time"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"/>
        </LinearLayout>
</LinearLayout>
